# lunch-and-learn-intro-to-testing

./: .gitignore  Cargo.toml  Makefile  README.md  glide.yaml
cmd/coladad/: main.go
cmd/coladad/config/: config.go
cmd/coladad/handlers/: coladas.go  drawings.go  routes.go
cmd/coladad/tests/: main_test.go
cmd/coladad/tests/features/: coladadrinkers-list.feature  drawings.feature
database/: clean-colada-lottery.db  colada-lottery-schema.sql
internal/activities/: clean.go  clean_test.go  make_coladas.go  make_coladas_test.go
internal/coladas/: colada_drinker.go  colada_drinker_test.go
internal/db/: sqlite.go
internal/drawing/: model.go
internal/history/: model.go
internal/middleware/: error.go  logger.go
internal/platform/context/: context.go
internal/platform/web/: response.go  validation.go  web.go
pkg/: colada_lottery.d.ts  colada_lottery.js  colada_lottery_bg.wasm  package-lock.json  package.json
src/: lib.rs
www/: colada-lotery.css  index.html  index.js  package-lock.json
